tests/lexer_test/errors/identifiers.outlexerrors
[invalidid, _abc, 1, 1]
[invalidid, _1abc, 3, 1]
